# poprox-recommender

./: .copier-answers.yml  .dockerignore  .dvcignore  .editorconfig  .env.dev  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.md  Makefile  README.md  README_PERSONA.md  cloudformation.yml  conda-lock-cuda.yml  conda-lock.yml  data-sharing.toml  deploy.sh  dvc.yaml  entrypoint.sh  jupytext.toml  lambda-bootstrap.sh  lenskit.toml  local_req.py  mind_article_top_neighbors.csv  mind_article_topics.csv  package-lock.json  package.json  pixi.toml  pyproject.toml  requirements.txt  send_req.py  serverless.yml  shared-data.sh  tasks.py  test_standalone.py  test_two_users.py  train_nrms_hpc.slurm
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.dvc/: config
.github/workflows/: check-data-pipeline.yml  check-source.yml  deploy.yml  docker-image.yml  run-tests.yml  share-data.yml
data/: .gitignore  MINDlarge_dev.zip.dvc  MINDlarge_test.zip.dvc  MINDlarge_train.zip.dvc  MINDsmall_dev.zip.dvc  MINDsmall_train.zip.dvc  POPROX.dvc  data.txt.dvc  dvc.yaml  mind-ingest.sql  mind-schema.sql  poprox-ingest.sql  poprox-post.sql  poprox-schema.sql  process_offline_test_data.py  test_mind_large.dvc
data/Test/: clicks.parquet  interests.parquet  mentions.parquet  newsletters.parquet  recommendation.parquet  recommendation_01.parquet  recommendation_fm_nrms.parquet  recommendation_nrms.parquet  recommendation_topic_scores.parquet
data/Test_Large/: topical_pref_only_topic_embeddings_cand_11_months.csv  topical_pref_only_topic_embeddings_cand_15_15_days.csv  topical_pref_only_topic_embeddings_cand_15_days.csv  topical_pref_only_topic_embeddings_cand_30_days.csv  topical_pref_only_topic_embeddings_def.csv  topical_pref_only_topic_embeddings_def_llm.csv
data/val_mind_large/: .gitignore  behavior_uuid_ID.json.dvc  mind_test.json.dvc  news_uuid_ID.json.dvc
dev/: .gitignore  constraints.yml  cuda-constraints.yml  environment.yml  update-dep-lock.sh
models/: .gitignore  ckpt-30000.pth.dvc  dvc.yaml  l30_topic_embeddings_def_llm.safetensors  news_encoder.safetensors.dvc  topic_embeddings_cand_11_months.safetensors  topic_embeddings_cand_15.safetensors  topic_embeddings_cand_15_15.safetensors  topic_embeddings_cand_15_15_days.safetensors  topic_embeddings_cand_15_days.safetensors  topic_embeddings_cand_30.safetensors  topic_embeddings_cand_30_days.safetensors  topic_embeddings_def.safetensors  topic_embeddings_def_llm.safetensors  user_encoder.safetensors.dvc  word2int.tsv.dvc
models/all-MiniLM-L6-v2/: .gitattributes  .gitignore  data_config.json  model.safetensors.dvc  tokenizer_config.json
models/distilbert-base-uncased/: .gitignore  model.safetensors.dvc  tokenizer.json.dvc  tokenizer_config.json  vocab.txt.dvc
models/miner/: model.py
models/news-category-classifier-distilbert/: .gitignore  README.md  config.json  model.safetensors.dvc  vocab.txt.dvc
models/nrms-mind/: .gitignore  model.safetensors.dvc
models/precalculated_model/: mind_emb.parquet
notebooks/: MINDEvalResults.ipynb  MINDEvalResults.md  MINDSmallEvalResults.ipynb  MINDSmallEvalResults.md  basic-eval-template.ipynb  basic-eval-template.md  dvc.yaml  mind-quick-summary.ipynb  mind-quick-summary.md  mind-small.ipynb  mind-small.md  mind-subset.ipynb  mind-subset.md  mind-val.ipynb  mind-val.md  plot_mind_val_metrics.ipynb
notebooks/figures/: .gitignore
notebooks/mind-small/: mind-small.ipynb  mind-small.md
notebooks/mind-subset/: mind-subset.ipynb  mind-subset.md
notebooks/mind-val/: mind-val.ipynb  mind-val.md
outputs/: .gitignore  metrics.json  mind-small-metrics.csv  mind-small-tasks.csv  mind-subset-metrics.csv  mind-subset-tasks.csv  mind-val-metrics.csv  mind-val-metrics.json  mind-val-tasks.csv  theta_kl_values.txt  theta_kl_values_2.txt
outputs/mind-small/: .gitignore  metrics.csv
outputs/mind-subset/: .gitignore  metrics.csv
outputs/mind-val/: .gitignore  metrics.csv
outputs/poprox-latest/: options.toml
pipelines/: _common.toml  nrms.toml  softmax.toml
prompts/: rank.md  rank.txt  rewrite.md  rewrite.txt  user_profile.md
prompts/evals/: clarity.txt  engagement.txt  relevance.txt  sensationalism.txt
scripts/: auto-comments.js  check-dvc-status.sh  clickPersona_generator.py  compare_artifacts.py  compute-topic-embeddings-cand.py  compute-topic-embeddings-def.py  compute-topic-embeddings.py  fetch-shared-data.sh  local_emb.py  local_persona_req.py  local_rec.py  local_req.py  mind_to_ap.py  multi_tagged_click_presona_generator.py  performance_eval.py  persona_generator.py  send-request.py  single_tag_vs_multi_tag.py  single_tagged_click_persona_generator.py  testArticleEmb.py  test_live_endpoint.py  token_count.py  topic_des_vs_single_tag_vs_multi_tag.py  topic_wise_article_balanced_topical_recall.py  topical_article_headline_scrapper.py  topical_eval_avg_over_one_month.py  topical_eval_balanced_one_day.py  topical_eval_for_hum_annotator.py  topical_eval_with_real_click.py  topical_precesion.py  topical_precision_eval.py  topical_recall.py  upload-shared-data.sh
scripts/compute-topic-embeddings/: compute-topic-embeddings-cand-V2.py  compute-topic-embeddings-cand.py  compute-topic-embeddings-def.py
scripts/mind_to_AP/: emb_distance.py  todo.txt  (+3 more)
serverless/: functions.yaml  offline.functions.yaml
src/: config.yaml
tests/: .gitignore  basic-request.json  conftest.py  eval_with_mind_large_test.py  generate_test_request.py  llm_judge_tests.py  make_dummy_data.py  medium_request.json  pfar_test.py  request_body.json.dvc  test-docker-lambda.py  test.py  test_calibration.ipynb  test_data.ipynb  test_datachecks.py  test_gini.py  test_gini_topics.py  test_ils.py  test_impression_filter.py  test_joiners.py  test_k_coverage.py  test_lazy_recs.py  test_lip.py  test_paths.py  test_persona_recommender.py  test_persona_system.py  test_pfar.py  test_pipeline.py  test_ranking_cache.py  test_rbe.py  test_rbo.py  test_section_lip.py  test_select.py  test_serialization.py  test_serverless_offline.py  test_smoke.py  test_topic_calibration.py  test_topic_classification.py
(+408 files in other folders)
