[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "poprox-recommender"
description = "POPROX recommender implementation and infrastructure."
authors = [{ name = "Karl Higley", email = "khigley@umn.edu" }]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]
requires-python = "~=3.12.0"
readme = "README.md"
license = { file = "LICENSE.md" }
dynamic = ["version"]
dependencies = [
  "httpx~=0.28.1",
  "fastapi[all]~=0.115.11",
  "mangum~=0.19.0",
  "uvicorn~=0.34.0",
  "lenskit>=2025.3.0a4.dev145",
  "nltk>=3.8,<4",
  "smart_open==7.*",
  "safetensors>=0.4,<1",
  "transformers>=4.41,<5",
  "poprox-concepts @ git+https://github.com/CCRI-POPROX/poprox-concepts.git",
  "openai>=1.76.0",
  "python-dotenv>=1.1.0",
  "pydantic>=2.7.4",
  "scikit-learn>=1.6.1",
  "accelerate>=0.26.0",
]

[project.optional-dependencies]
deploy = ["awslambdaric ~=2.2"]
# S3 persistence support
s3 = ["boto3 >=1.26.0"]

[project.urls]
Homepage = "https://docs.poprox.ai"
GitHub = "https://github.com/CCRI-POPROX/poprox-recommender"

## dependencies for various task sets
[dependency-groups]
lint = ["pre-commit ~=3.7", "ruff >=0.4", "pyright ~=1.1"]
test = ["requests >=2.31,<3", "coverage >=6.5", "pytest >=8"]
eval = ["docopt-ng >=0.9", "pandas ~=2.0", "ray ~=2.44"]
dev = [
  "hatch ~=1.13",
  "ipython >=8",
  "notebook >=7.2",
  "pyarrow-stubs ~=17.11",
  { include-group = "lint" },
  { include-group = "test" },
  { include-group = "data" },
  { include-group = "eval" },
  "scikit-learn>=1.3,<2",
]
data = [
  "invoke ~=2.2",
  "dvc[s3] ~=3.51",
  "docopt-ng >=0.9",
  "pandas ~=2.0",
  "matplotlib ~=3.6",
  "seaborn ~=0.13.2",
  "plotnine ~=0.14.1",
  "jupytext >=1.16",
  "papermill~=2.6",
  "scipy ~=1.14.1",
  "pylatex ~=1.4.2",
  "jq ~=1.8",
  "zstandard ~=0.23",
  "wcmatch>=10.0",
]

# ---- Choose your Torch build at sync time (exactly one) ----
torch-cpu = ["torch==2.8.0+cpu"]
# If you really want CUDA 12.8 wheels (as your previous error shows):
torch-cuda = ["torch==2.8.0+cu128"]

## UV resolver/setup for PyTorch
[tool.uv]
# Ensure the two choices are mutually exclusive
conflicts = [[{ group = "torch-cpu" }, { group = "torch-cuda" }]]
# Use default index strategy (do NOT set unsafe-first-match)

[tool.uv.sources]
# Use CUDA index for torch when available
torch = { index = "pytorch-cuda" }

# pre-release version of LensKit
[[tool.uv.index]]
name = "lenskit-dev"
url = "https://pypi.lenskit.org/lenskit-dev/"

# PyPI index providing CPU-only PyTorch without clobbering unrelated packages
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://pypi.lenskit.org/torch/cpu/"

# CUDA-enabled PyTorch wheels — marked explicit so they’re only considered
# when torch is a direct dependency (i.e., when you include the torch-cuda group).
[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://pypi.lenskit.org/torch/cu128/"
explicit = true

###### build and environment configurations ######
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
only-include = ["src", "tests", "LICENSE.md", "README.md"]

[tool.hatch.version]
path = "src/poprox_recommender/__about__.py"

###### tooling configurations ######
# ruff — formatting and lints
[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["F", "I", "E"]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.lint.per-file-ignores]
# tests can have unused imports (for pytest fixtures)
"tests/**/*" = ["F401"]

[tool.ruff.isort]
known-first-party = ["poprox_*"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.pyright]
exclude = [".venv/", ".pixi/", "node_modules/"]
reportIncompatibleMethodOverride = false  # Component's interface creates noise with this check

[tool.coverage.run]
source_pkgs = ["poprox_recommender", "tests"]
branch = true
parallel = true
omit = ["src/poprox_recommender/__about__.py"]

[tool.coverage.paths]
poprox_recommender = ["src/poprox_recommender"]
tests = ["tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
